Fixed check high score bug and various styling spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
 
 body {
     background: #aaaaaa;
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 nav {
@@ -69,7 +72,7 @@ input {
     width: 50%;
     height: 8%;
     border-radius: 10px;
-    /* margin-top: 40%; */
+    margin-top: 100px;
     font-size: 32px;
 }
 
@@ -77,7 +80,7 @@ input {
     width: 25%;
     height: 8%;
     border-radius: 10px;
-    margin-top: 30px;
+    margin: 30px 10px;
     font-size: 32px;
 }
 
@@ -92,8 +95,36 @@ input {
 }
 
 #about-screen {
-    width: 85%;
-    margin: 10px auto;
+    width: 60%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-/* media query for mobile */
+.screen {
+    margin-top: 200px;
+}
+
+/* media queries */
+@media (max-width: 450px) {
+    .icon {
+        width: 30px;
+        height: 30px;
+    }
+
+    table {
+        margin: 40px auto;
+        font-size: 20px;
+    }
+
+    .play {
+        margin-top: 100px;
+    }
+
+    .screen {
+        margin-top: 120px;
+    }
+
+    #about-screen {
+        width: 90%;
+    }
+}
